command processing and world structure

--- a/views/client/ui_gameTurn.pug
+++ b/views/client/ui_gameTurn.pug
@@ -1,6 +1,7 @@
 .turn
-    span.vorplePrompt &gt; 
-    span.previousCommand #{playerInput}
+    if !hideUserInput
+        span.vorplePrompt &gt; 
+        span.previousCommand #{playerInput}
     .turnContent
         .main
             span #{resultOutput}
