--- a/views/client/ui_gameTurn.pug
+++ b/views/client/ui_gameTurn.pug
@@ -4,7 +4,7 @@
         span.previousCommand #{playerInput}
     .turnContent
         .main
-            span #{resultOutput}
+            span !{resultOutput}
             br
             br
 
