Simon Says demo

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -21,7 +21,7 @@ html
     //- link(rel="stylesheet" href='node_modules/xterm/css/xterm.css')
     //- script(src='/assets/xterm.js')
     //- script(src='node_modules/xterm-addon-fit/out/FitAddon.js')
-    script(src='/javascripts/uiterm.js')
-    script(src='/javascripts/templates.js')
+    script(src='/js/uiterm.js')
+    script(src='/js/templates.js')
   body.play.minimal
     block content
